fix: set fixed width on summary table on mobiles

--- a/src/app/summary-calendar/month-summary/month-summary.component.scss
+++ b/src/app/summary-calendar/month-summary/month-summary.component.scss
@@ -2,7 +2,7 @@ table.table {
     border-collapse: separate;
     background-color:white;
     text-align: center;
-    width: 194vh;
+    width: 1100px;
 }
 
 @media only screen and (min-width: 1500px) {
